--- a/style/global.scss
+++ b/style/global.scss
@@ -79,6 +79,14 @@ a{color: #575555;}
 }
 
 
+//用户登录页定义
+.ilogin{padding-top:6rem;padding-bottom: 2rem; background: url("images/login_bg.png") top no-repeat;background-size: cover;}
+
+.ilogin_con{padding: 2rem 1rem; background:#F06478;border-radius: 1rem;
+h1{font-size: 1.68rem;}
+
+}
+
 
 
 /*769-1930分辨率之间传统低分屏幕优化*/
@@ -92,6 +100,11 @@ header .form-control{width: auto !important;}
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");}
 }
 
+.ilogin{padding-top:0;}
+
+footer{
+strong{font-size: 1.8rem;}
+}
 
 
  }
