--- a/style/global.css
+++ b/style/global.css
@@ -17,7 +17,7 @@ header .form-inline { padding-top: 1rem; }
 
 .ask { margin-top: 1rem; }
 
-.ihero .navbar { padding-left: 0; }
+.ihero .navbar { padding-left: 0; padding-bottom: 0; border-bottom: 2px solid #d2364c; }
 .ihero .navbar .navbar-brand { width: 20rem; background: #d2364c; color: #fff; text-align: center; }
 
 .ibanner01, .ibanner02, .ibanner03 { height: 20rem; background: url(images/banner01.jpg) no-repeat bottom; background-size: cover; }
@@ -42,7 +42,7 @@ header .form-inline { padding-top: 1rem; }
 .ihome_list_box li p { margin-bottom: 0; font-size: 0.8rem; color: #ccc; font-weight: normal; }
 .ihome_list_box li span { padding-left: 1rem; }
 .ihome_list_box li em { color: #d2364c; padding-right: 1rem; }
-.ihome_list_box li:hover { box-shadow: 4px 4px 6px 6px rgba(204, 204, 204, 0.8); }
+.ihome_list_box li:hover { transition: 0.5s ease-in-out; margin-top: -1rem; box-shadow: 4px 4px 6px 6px rgba(204, 204, 204, 0.8); }
 
 footer { margin-top: 1rem; padding-top: 1.6rem; padding-bottom: 1rem; color: #575555; background: #ccc; text-align: center; }
 footer strong { font-size: 2.2rem; }
@@ -52,6 +52,42 @@ footer a { color: #575555; }
 
 .ilogin_con { padding: 2rem 1rem; background: #F06478; border-radius: 1rem; }
 .ilogin_con h1 { font-size: 1.68rem; }
+
+.mysite { margin-top: 1rem; }
+
+.item_con { margin-top: 1rem; }
+.item_con h1 { font-size: 1.68rem; }
+
+.box { width: 100%; }
+
+.tb-thumb { margin: 10px 0 0; overflow: hidden; }
+.tb-thumb li { margin-bottom: 0.2rem; padding-left: 0.2rem !important; padding-right: 0.2rem !important; float: left; background: none repeat scroll 0 0 transparent; }
+.tb-thumb li img { padding: 2px; width: 100%; height: 4rem; border: 1px solid #ddd; }
+.tb-thumb li a:focus { outline: none; }
+
+.tb-s310, .tb-s310 a { width: 100%; }
+
+.tb-s310, .tb-s310 img { width: 100%; padding: 1px; }
+
+.tb-booth { border: 1px solid #cdcdcd; position: relative; z-index: 1; }
+
+#thumblist { padding-left: 0.2rem; padding-right: 0.2rem; }
+
+#thumblist .tb-selected img { border: 1px solid #f00; }
+
+.con_shop_list .list-group-item { margin-bottom: 0; padding-left: 0; padding-right: 0; padding-bottom: 5px; border: none; border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
+
+.con_shop_list span { float: right; }
+
+.con_shop_nums { float: right; width: 8.6rem; }
+
+.con_shop_nums i { display: block; color: #fff; cursor: pointer; }
+
+.zoomDiv { z-index: 999; position: absolute; top: 0px; left: 0px; width: 200px; height: 200px; background: #ffffff; border: 1px solid #cccccc; display: none; text-align: center; overflow: hidden; }
+
+.zoomMask { position: absolute; background: url(images/mask.png) repeat scroll 0 0 transparent; cursor: move; z-index: 1; }
+
+.cart_item { margin-top: 1rem; }
 
 /*769-1930分辨率之间传统低分屏幕优化*/
 /*小于768px手机优化*/
