--- a/style/global.css
+++ b/style/global.css
@@ -14,6 +14,7 @@ header { padding-top: 1rem; }
 header .form-control { width: 40rem !important; height: 3rem; border: 5px solid #d2364c; border-radius: 0; }
 header .input-group-text { border-radius: 0; background: #d2364c; color: #fff; border: 5px solid #d2364c; }
 header .form-inline { padding-top: 1rem; }
+header i { margin-right: 0.4rem; }
 
 .ask { margin-top: 1rem; }
 
@@ -76,8 +77,8 @@ footer a { color: #575555; }
 #thumblist .tb-selected img { border: 1px solid #f00; }
 
 .con_shop_list .list-group-item { margin-bottom: 0; padding-left: 0; padding-right: 0; padding-bottom: 5px; border: none; border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
-
 .con_shop_list span { float: right; }
+.con_shop_list p { padding: 1rem; background: #eee; font-size: 0.9rem; color: #666; }
 
 .con_shop_nums { float: right; width: 8.6rem; }
 
