--- a/style/global.scss
+++ b/style/global.scss
@@ -29,6 +29,7 @@ header{padding-top: 1rem;
 .form-control{width: 40rem !important; height: 3rem; border: 5px solid $主红色; border-radius: 0;}
 .input-group-text{border-radius: 0;background: $主红色;color: #fff; border: 5px solid $主红色;}
 .form-inline{padding-top: 1rem;}
+i{margin-right: 0.4rem;}
 }
 
 //滚动公告
@@ -108,8 +109,11 @@ li a:focus { outline: none; }
 #thumblist { padding-left: 0.2rem; padding-right: 0.2rem; }
 #thumblist .tb-selected img { border: 1px solid #f00; }
 
-.con_shop_list .list-group-item { margin-bottom: 0; padding-left: 0; padding-right: 0; padding-bottom: 5px; border: none; border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
-.con_shop_list span { float: right; }
+.con_shop_list{
+.list-group-item { margin-bottom: 0; padding-left: 0; padding-right: 0; padding-bottom: 5px; border: none; border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
+span { float: right; }
+p{padding: 1rem; background: #eee;font-size: 0.9rem;color: #666;}
+}
 
 .con_shop_nums { float: right; width: 8.6rem; }
 .con_shop_nums i { display: block; color: #fff; cursor: pointer; }
